# Resume_Scorer

./: .gitignore  .vercelignore  API_REFERENCE.md  BATCH_FEATURE_SETUP.md  BATCH_TESTING_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RUNNING_TOGETHER.md  SETUP_COMPLETE.md  VERCEL_DEPLOYMENT.md  fastapi_app.py  main.py  pyproject.toml  requirements.txt  vercel.json
JD/: Data_Science_JD.docx  ~$ta_Science_JD.docx
Resume/: Mohandeep.docx  gautum-Resume.docx  prakeet_sir_resume.docx  rahul_resume.docx  simth_resume.docx
api/: index.py
backend/: config.py  example_usage.py  main.py  routes.py  run.bat  run.sh  services_batch_scorer.py  services_embeddings.py  services_parser.py  services_rag.py  services_scorer.py  test_app.py
frontend/: README.md  index.html  package-lock.json  package.json  run.bat  run.sh  script.js  server.py  styles.css
frontend/src/: App.jsx  main.jsx  style.css
src/: config.py  embedder.py  loader.py  scorer.py  test.py
static/: style.css
templates/: index.html
