[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-resume-scorer"
version = "1.0.0"
description = "Resume scoring system using RAG and OpenAI"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.1",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "python-docx==1.0.0",
    "PyMuPDF==1.24.2",
    "openai>=1.30.0",
    "python-dotenv==1.0.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.2.1",
]
